Added DbContext and ConnectionString for the PostgreSQL database.

--- a/Prometheus.Api/appsettings.json
+++ b/Prometheus.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConntection": "Host=localhost;Database=PrometheusDb;Username=postgres;Password=dev123"
+  },
   "AllowedHosts": "*"
 }
